contact app bagian 1

--- a/views/layouts/layoutDetail.ejs
+++ b/views/layouts/layoutDetail.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
-    <link rel="stylesheet" href="./style/tailwind.dist.css">
+    <link rel="stylesheet" href="../style/tailwind.dist.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body class="font-Ysabeau">
